optional java options to be added to CATALINA_OPTS